apply plugin: 'com.android.library'
apply plugin: 'maven-publish'

android {
    namespace "com.github.tbruyelle.rxpermissions"
    compileSdkVersion rootProject.ext.compileSdkVersion

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    defaultConfig {
        minSdkVersion rootProject.ext.minSdkVersion
        targetSdkVersion rootProject.ext.targetSdkVersion
        versionName rootProject.ext.libraryVersion
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    testOptions.unitTests.includeAndroidResources = true
    testOptions.unitTests.all {
        // unitTests.returnDefaultValues = true
        // Always show the result of every unit test, even if it passes.
        it.jvmArgs += [
                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
                '--add-opens', 'java.base/java.io=ALL-UNNAMED'
            ]
        testLogging {
            events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation(rootProject.ext.rxJava) {
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
    }
    implementation(rootProject.ext.androidXFragment) {
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
    }
    implementation(rootProject.ext.androidXAnnotation) {
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
    }
    implementation(rootProject.ext.androidXAppcompat) {
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
    }

    testImplementation 'junit:junit:4.13'
    testImplementation(rootProject.ext.mockito) {
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
    }
    testImplementation(rootProject.ext.robolectric) {
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
    }
    testImplementation rootProject.ext.khronosOpenGLApi
}

afterEvaluate {
    publishing {
        repositories {
            mavenLocal()
        }
        publications {
            release(MavenPublication) {
                groupId = project.findProperty('group') ?: rootProject.ext.publishedGroupId
                artifactId = rootProject.ext.artifact
                version = project.findProperty('version') ?: rootProject.ext.libraryVersion

                artifact bundleReleaseAar

                pom {
                    name = rootProject.ext.libraryName
                    description = rootProject.ext.libraryDescription
                    url = rootProject.ext.siteUrl

                    licenses {
                        license {
                            name = rootProject.ext.licenseName
                            url = rootProject.ext.licenseUrl
                        }
                    }
                    developers {
                        developer {
                            id = rootProject.ext.developerId
                            name = rootProject.ext.developerName
                            email = rootProject.ext.developerEmail
                        }
                    }
                    scm {
                        connection = rootProject.ext.gitUrl
                        developerConnection = rootProject.ext.gitUrl
                        url = rootProject.ext.siteUrl
                    }
                }
            }
        }
    }
}